--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.arkitik.radix</groupId>
     <artifactId>radix</artifactId>
     <packaging>pom</packaging>
-    <version>v1.0.1</version>
+    <version>v1.1.0</version>
     <modules>
         <module>radix-port</module>
         <module>radix-adapter</module>
@@ -46,10 +46,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.5.21</kotlin.version>
-        <dokka.version>1.5.0</dokka.version>
-        <spring-boot.version>2.5.4</spring-boot.version>
-        <logbook.version>2.13.0</logbook.version>
+        <kotlin.version>1.6.0</kotlin.version>
+        <dokka.version>1.6.0</dokka.version>
+        <spring-boot.version>2.6.1</spring-boot.version>
+        <logbook.version>2.14.0</logbook.version>
     </properties>
     <dependencies>
         <dependency>
@@ -236,6 +236,15 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <dokkaPlugins>
+                        <plugin>
+                            <groupId>org.jetbrains.dokka</groupId>
+                            <artifactId>kotlin-as-java-plugin</artifactId>
+                            <version>${dokka.version}</version>
+                        </plugin>
+                    </dokkaPlugins>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
