--- a/radix-adapter/pom.xml
+++ b/radix-adapter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.3.0</version>
+        <version>v1.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>radix-adapter-shared</module>
+        <module>radix-adapter-jpa-spec-ext</module>
     </modules>
 
 
