feat: Add new JPA specifications extensions.

--- a/radix-dependencies/pom.xml
+++ b/radix-dependencies/pom.xml
@@ -98,6 +98,11 @@
                 <artifactId>radix-development-operation-ext</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>radix-adapter-jpa-spec-ext</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
