--- a/radix-dependencies/pom.xml
+++ b/radix-dependencies/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>radix</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.4.0</version>
+        <version>v1.4.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>radix-dependencies</artifactId>
-
+    <description>Radix Dependencies</description>
     <dependencyManagement>
         <dependencies>
             <dependency>
