--- a/radix-adapter/radix-adapter-shared/pom.xml
+++ b/radix-adapter/radix-adapter-shared/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-adapter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.4.1</version>
+        <version>v1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
