--- a/radix-starter/radix-starter-logger-webflux/pom.xml
+++ b/radix-starter/radix-starter-logger-webflux/pom.xml
@@ -5,13 +5,18 @@
     <parent>
         <artifactId>radix-starter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.4.1</version>
+        <version>v1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter-logger-webflux</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>radix-port-logger</artifactId>
