--- a/radix-tool/radix-tool-http/pom.xml
+++ b/radix-tool/radix-tool-http/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-tool</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.4.1</version>
+        <version>v1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,10 +15,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
