--- a/radix-tool/radix-tool-json-dsl/pom.xml
+++ b/radix-tool/radix-tool-json-dsl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-tool</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.4.1</version>
+        <version>v1.5.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
