--- a/radix-starter/radix-starter-logger/src/test/resources/application.yml
+++ b/radix-starter/radix-starter-logger/src/test/resources/application.yml
@@ -3,10 +3,11 @@ arkitik:
     logger:
       formatter: json
       logger-name: io.arkitik.radix.starter.logger.SampleApp
-      masked-keys:
-        - userUuid
-        - user-agent
-        - accept
+      ignored:
+        fields:
+          - userUuid
+          - user-agent
+          - accept
 logging:
   level:
     io:
