--- a/radix-development/radix-development-operation/pom.xml
+++ b/radix-development/radix-development-operation/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>radix-development-operation</artifactId>
     <dependencies>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
