--- a/radix-starter/radix-starter-logger/pom.xml
+++ b/radix-starter/radix-starter-logger/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
