--- a/radix-adapter/radix-adapter-jpa-spec-ext/pom.xml
+++ b/radix-adapter/radix-adapter-jpa-spec-ext/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-adapter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.6.0</version>
+        <version>v2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,8 +17,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
