--- a/radix-development/radix-development-operation/pom.xml
+++ b/radix-development/radix-development-operation/pom.xml
@@ -5,15 +5,15 @@
     <parent>
         <artifactId>radix-development</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.6.0</version>
+        <version>v2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-development-operation</artifactId>
     <dependencies>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
