--- a/radix-starter/radix-starter-logger/pom.xml
+++ b/radix-starter/radix-starter-logger/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-starter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v1.6.0</version>
+        <version>v2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -30,6 +30,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
     </dependencies>
 
