--- a/radix-adapter/pom.xml
+++ b/radix-adapter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.0.0</version>
+        <version>v2.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,6 +14,7 @@
     <modules>
         <module>radix-adapter-shared</module>
         <module>radix-adapter-jpa-spec-ext</module>
+        <module>radix-adapter-exposed</module>
     </modules>
 
 
