--- a/radix-adapter/radix-adapter-exposed/pom.xml
+++ b/radix-adapter/radix-adapter-exposed/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>radix-adapter</artifactId>
         <groupId>io.arkitik.radix</groupId>
+        <artifactId>radix-adapter</artifactId>
         <version>v2.1.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>radix-adapter-shared</artifactId>
+    <artifactId>radix-adapter-exposed</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,8 +18,13 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>radix-development-exposed-table</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.exposed</groupId>
+            <artifactId>exposed-core</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
