--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
             <dependency>
                 <groupId>org.jetbrains.exposed</groupId>
                 <artifactId>exposed-bom</artifactId>
-                <version>0.52.0</version>
+                <version>${exposed.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
