--- a/radix-dependencies/pom.xml
+++ b/radix-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.3.0</version>
+        <version>v2.3.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -96,6 +96,21 @@
             <dependency>
                 <groupId>${project.parent.groupId}</groupId>
                 <artifactId>radix-adapter-jpa-spec-ext</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>radix-development-exposed-table</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>radix-adapter-exposed</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>radix-starter-exposed</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
         </dependencies>
