--- a/radix-starter/radix-starter-exposed/pom.xml
+++ b/radix-starter/radix-starter-exposed/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.arkitik.radix</groupId>
         <artifactId>radix-starter</artifactId>
-        <version>v2.3.1</version>
+        <version>v2.4.0-BETA</version>
     </parent>
 
     <artifactId>radix-starter-exposed</artifactId>
