--- a/radix-starter/radix-starter-logger-webflux/pom.xml
+++ b/radix-starter/radix-starter-logger-webflux/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-starter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.3.1</version>
+        <version>v2.4.0-BETA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
