--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.arkitik.radix</groupId>
     <artifactId>radix</artifactId>
     <packaging>pom</packaging>
-    <version>v2.4.0-BETA</version>
+    <version>v2.4.0</version>
     <modules>
         <module>radix-port</module>
         <module>radix-adapter</module>
