--- a/radix-adapter/radix-adapter-exposed/pom.xml
+++ b/radix-adapter/radix-adapter-exposed/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.arkitik.radix</groupId>
         <artifactId>radix-adapter</artifactId>
-        <version>v2.4.0-BETA</version>
+        <version>v2.4.0</version>
     </parent>
 
     <artifactId>radix-adapter-exposed</artifactId>
