--- a/radix-port/radix-port-logger/pom.xml
+++ b/radix-port/radix-port-logger/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>radix-port</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.4.0-BETA</version>
+        <version>v2.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
