--- a/radix-development/radix-development-exposed-table/pom.xml
+++ b/radix-development/radix-development-exposed-table/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>io.arkitik.radix</groupId>
         <artifactId>radix-development</artifactId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
 
     <artifactId>radix-development-exposed-table</artifactId>
+    <name>radix-development-exposed-table</name>
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
