--- a/radix-starter/radix-starter-exposed/pom.xml
+++ b/radix-starter/radix-starter-exposed/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>io.arkitik.radix</groupId>
         <artifactId>radix-starter</artifactId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
 
     <artifactId>radix-starter-exposed</artifactId>
+    <name>radix-starter-exposed</name>
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.exposed</groupId>
