--- a/radix-adapter/radix-adapter-jpa-spec-ext/pom.xml
+++ b/radix-adapter/radix-adapter-jpa-spec-ext/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>radix-adapter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-adapter-jpa-spec-ext</artifactId>
+    <name>radix-adapter-jpa-spec-ext</name>
     <dependencies>
         <dependency>
             <groupId>org.springframework.data</groupId>
