--- a/radix-starter/pom.xml
+++ b/radix-starter/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>radix</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter</artifactId>
+    <name>radix-starter</name>
     <packaging>pom</packaging>
     <modules>
         <module>radix-starter-logger</module>
