--- a/radix-starter/radix-starter-logger-webflux/pom.xml
+++ b/radix-starter/radix-starter-logger-webflux/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>radix-starter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter-logger-webflux</artifactId>
+    <name>radix-starter-logger-webflux</name>
 
     <dependencies>
         <dependency>
