--- a/radix-starter/radix-starter-logger/pom.xml
+++ b/radix-starter/radix-starter-logger/pom.xml
@@ -5,16 +5,22 @@
     <parent>
         <artifactId>radix-starter</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter-logger</artifactId>
+    <name>radix-starter-logger</name>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
