--- a/radix-tool/radix-tool-http/pom.xml
+++ b/radix-tool/radix-tool-http/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>radix-tool</artifactId>
         <groupId>io.arkitik.radix</groupId>
-        <version>v2.4.4</version>
+        <version>v2.4.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-tool-http</artifactId>
+    <name>radix-tool-http</name>
 
     <dependencies>
         <dependency>
