chore: enhance release process with branch-specific versioning and add release script

--- a/.github/workflows/release-trigger.yml
+++ b/.github/workflows/release-trigger.yml
@@ -10,7 +10,6 @@ jobs:
       id-token: write
       actions: write
       pull-requests: write
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -53,6 +52,20 @@ jobs:
           fi
           echo "✓ Maven Central credentials validated"
 
+      - name: Detect branch and set versioning strategy
+        id: branch-info
+        run: |
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          echo "Current branch: $BRANCH_NAME"
+          
+          if [[ $BRANCH_NAME =~ ^1\. ]]; then
+            echo "Detected 1.x.x branch - will use maintenance versioning"
+            echo "is_maintenance_branch=true" >> $GITHUB_OUTPUT
+          else
+            echo "Detected main/feature branch - will use standard versioning"
+            echo "is_maintenance_branch=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Create .releaserc
         env:
           CENTRAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
@@ -60,9 +73,62 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cat > .releaserc << EOF
+          if [ "${{ steps.branch-info.outputs.is_maintenance_branch }}" = "true" ]; then
+            # Configuration for 1.x.x maintenance branches
+            cat > .releaserc << EOF
           {
-            "branches": ["main", "master", "fix-release"],
+            "branches": [
+              "main",
+              {
+                "name": "1.+([0-9])?(.{+([0-9]),x}).x",
+                "range": "1.x.x",
+                "channel": "1.x"
+              }
+            ],
+            "plugins": [
+              ["@semantic-release/commit-analyzer", {
+                "preset": "conventionalcommits",
+                "releaseRules": [
+                  {"type": "feat", "release": "patch"},
+                  {"type": "fix", "release": "patch"},
+                  {"type": "perf", "release": "patch"},
+                  {"type": "revert", "release": "patch"}
+                ]
+              }],
+              ["@semantic-release/release-notes-generator", {
+                "preset": "conventionalcommits"
+              }],
+              "@semantic-release/changelog",
+              ["@semantic-release/exec", {
+                "prepareCmd": "./.release.sh \${nextRelease.version}"
+              }],
+              ["@semantic-release/github", {
+                "assets": [
+                  {
+                    "path": "release-artifacts/*.zip",
+                    "label": "Distribution Archive (v1.x maintenance)"
+                  }
+                ]
+              }],
+              ["@semantic-release/git", {
+                "assets": ["CHANGELOG.md", "pom.xml", "**/pom.xml", "README.md"],
+                "message": "chore(release): \${nextRelease.version} [skip ci] [1.x maintenance]\n\n\${nextRelease.notes}"
+              }]
+            ]
+          }
+          EOF
+          else
+            # Configuration for main branch (2.x.x and beyond)
+            cat > .releaserc << EOF
+          {
+            "branches": [
+              "main",
+              {
+                "name": "1.+([0-9])?(.{+([0-9]),x}).x",
+                "range": "1.x.x",
+                "channel": "1.x"
+              }
+            ],
             "plugins": [
               "@semantic-release/commit-analyzer",
               "@semantic-release/release-notes-generator",
@@ -75,7 +141,7 @@ jobs:
                   {
                     "path": "release-artifacts/*.zip",
                     "label": "Distribution Archive"
-                  },
+                  }
                 ]
               }],
               ["@semantic-release/git", {
@@ -85,6 +151,7 @@ jobs:
             ]
           }
           EOF
+          fi
 
       - name: Release
         env:
