--- a/radix-dependencies/pom.xml
+++ b/radix-dependencies/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>radix-dependencies</artifactId>
+    <name>radix-dependencies</name>
     <description>Radix Dependencies</description>
     <dependencyManagement>
         <dependencies>
@@ -95,12 +96,22 @@
             </dependency>
             <dependency>
                 <groupId>${project.parent.groupId}</groupId>
-                <artifactId>radix-development-operation-ext</artifactId>
+                <artifactId>radix-adapter-jpa-spec-ext</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.parent.groupId}</groupId>
-                <artifactId>radix-adapter-jpa-spec-ext</artifactId>
+                <artifactId>radix-development-exposed-table</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>radix-adapter-exposed</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.parent.groupId}</groupId>
+                <artifactId>radix-starter-exposed</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
         </dependencies>
