--- a/radix-development/radix-development-usecase-reactive/pom.xml
+++ b/radix-development/radix-development-usecase-reactive/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-development-usecase-reactive</artifactId>
+    <name>radix-development-usecase-reactive</name>
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
