--- a/radix-starter/radix-starter-logger/pom.xml
+++ b/radix-starter/radix-starter-logger/pom.xml
@@ -10,11 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter-logger</artifactId>
+    <name>radix-starter-logger</name>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -30,6 +36,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
     </dependencies>
 
