--- a/radix-adapter/radix-adapter-shared/pom.xml
+++ b/radix-adapter/radix-adapter-shared/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-adapter-shared</artifactId>
+    <name>radix-adapter-shared</name>
 
     <dependencies>
         <dependency>
