--- a/radix-development/radix-development-exposed-table/pom.xml
+++ b/radix-development/radix-development-exposed-table/pom.xml
@@ -2,20 +2,29 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>radix-development</artifactId>
         <groupId>io.arkitik.radix</groupId>
+        <artifactId>radix-development</artifactId>
         <version>v1.6.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>radix-development-operation-ext</artifactId>
-
+    <artifactId>radix-development-exposed-table</artifactId>
+    <name>radix-development-exposed-table</name>
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
-            <artifactId>radix-development-operation</artifactId>
+            <artifactId>radix-development-identity</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.exposed</groupId>
+            <artifactId>exposed-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.exposed</groupId>
+            <artifactId>exposed-java-time</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
