--- a/radix-development/radix-development-identity/pom.xml
+++ b/radix-development/radix-development-identity/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-development-identity</artifactId>
+    <name>radix-development-identity</name>
 
 
 </project>
