--- a/radix-development/radix-development-operation/pom.xml
+++ b/radix-development/radix-development-operation/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-development-operation</artifactId>
+    <name>radix-development-operation</name>
     <dependencies>
         <dependency>
             <groupId>javax.validation</groupId>
