--- a/radix-development/radix-development-store/pom.xml
+++ b/radix-development/radix-development-store/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-development-store</artifactId>
+    <name>radix-development-store</name>
 
     <dependencies>
         <dependency>
