--- a/radix-development/radix-development-usecase/pom.xml
+++ b/radix-development/radix-development-usecase/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-development-usecase</artifactId>
+    <name>radix-development-usecase</name>
 
 
 </project>
