--- a/radix-port/pom.xml
+++ b/radix-port/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-port</artifactId>
+    <name>radix-port</name>
     <packaging>pom</packaging>
     <modules>
         <module>radix-port-logger</module>
