--- a/radix-starter/pom.xml
+++ b/radix-starter/pom.xml
@@ -10,9 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter</artifactId>
+    <name>radix-starter</name>
     <packaging>pom</packaging>
     <modules>
         <module>radix-starter-logger</module>
         <module>radix-starter-logger-webflux</module>
+        <module>radix-starter-exposed</module>
     </modules>
 </project>
