--- a/radix-starter/radix-starter-logger-webflux/pom.xml
+++ b/radix-starter/radix-starter-logger-webflux/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-starter-logger-webflux</artifactId>
+    <name>radix-starter-logger-webflux</name>
 
     <dependencies>
         <dependency>
