--- a/radix-tool/radix-tool-http/pom.xml
+++ b/radix-tool/radix-tool-http/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-tool-http</artifactId>
+    <name>radix-tool-http</name>
 
     <dependencies>
         <dependency>
