--- a/radix-tool/radix-tool-json-dsl/pom.xml
+++ b/radix-tool/radix-tool-json-dsl/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>radix-tool-json-dsl</artifactId>
+    <name>radix-tool-json-dsl</name>
 
     <dependencies>
         <dependency>
